--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,28 @@
 
 /* styles to apply to all elements */
 
+* {
+    padding: 0;
+    margin: 0;
+    border: none;
+    background-color: white;
+}
+
 body {
     font-family: 'Poppins', sans-serif;
+    font-weight: 300;
+    letter-spacing: 0.3px;
+    color: black;
+}
+
+/* heading styling */
+
+h1 {
+    text-align: center;
+    font-size: 350%;
+    margin: 25px 0;
+}
+
+.logo {
+    height: 40px;
 }
