--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,16 +16,25 @@ body {
     font-weight: 300;
     letter-spacing: 0.3px;
     color: black;
+    text-align: center;
+    line-height: 200%;
 }
 
 /* heading styling */
 
 h1 {
-    text-align: center;
     font-size: 350%;
     margin: 25px 0;
 }
 
 .logo {
     height: 40px;
+}
+
+/* button styling */
+
+button {
+    border: 1px solid black;
+    border-radius: 8px;
+    padding: 10px;
 }
