--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,8 @@ button {
     border: 1px solid black;
     border-radius: 8px;
     padding: 10px;
+    display: block;
+    margin: 10px auto;
 }
 
 .hide {
