Add functions to show feedback on answers

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,3 +44,13 @@ button {
 .hide {
     display: none;
 }
+
+/* answer feedback */
+
+.correct {
+    background-color: palegreen;
+}
+
+.incorrect {
+    background-color: lightcoral;
+}
