Add styles to question text and remove console logs in JS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,12 @@ h1 {
     height: 40px;
 }
 
+/* question and intro text styling */
+
+#question, #intro-text {
+    font-size: 120%;
+}
+
 /* button styling */
 
 button {
