Adjust link styling; continue work on Readme (WIP)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,8 +76,9 @@ button {
 a {
     text-decoration: none;
     color: black;
+    font-weight: 600;
 }
 
 a:hover {
-    font-weight: 600;
+    text-decoration: underline;
 }
